
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added OnInitCulture event to core transport data.
- [#MODX-1672] Refactor collation/connection processors in setup to be more stable
- Updated xPDO to r414 for improvements in xPDOManager
- modInstall::writeConfig() uses new_file_permissions if specified or umask() settings by default
- Removed superfluous calls to xPDO/modX::setDebug() and xPDO/modX::setLogLevel() in modInstall
- modInstall::getConnection() now uses utf8_general_ci for charset/collation by default
- [#MODX-1691] Set Quick Create/Update windows to use anchor property rather than width to adjust for resizing
- Added 'cultureKey' setting to enable easier language translation in contexts/fe/components
- Fixes to styling for MODx.Browser window
- Added 'relativeUrl' parameter to MODx.Browser file data
- [#MODX-1674] Fixes and stabilization to MODx.Browser, specifically when used by RTEs
- Changing default editor from TinyMCE to blank value
- Fixed bug in setup where inplace setting was being forced to 1
- Cleaned up most processors, fixed wrong permission references, standardized code
- Fixed welcome panel to only show panels with permission to see
- Fixed error log view page to restrict viewing and clearing by permission
- Added descriptive information to Roles grid
- Lots of permissions fixes, other bugfixes and sanity checks to Element processors/controllers
- Added propertyset permissions
- Cleanups to Resource controllers, processors, optimizing of security permission checks
- Fixed various bugs with search page
- Fixed bug with adding policies that prevented partial regexp matches in name
- Fixed bugs when adding new policies or permissions that showed prior added perm/policy in form